# swaarm

./: .env.example  .gitignore  AI_SYSTEM_CARD.md  BAUPLAN_ERKLAERT.docx  BAUPLAN_ERKLAERT.md  Businessplan_SwarmSight_AI.docx  CLAUDE.md  HANDOFF_PROMPT.md  IMPLEMENTIERUNGSPLAN.md  IMPROVEMENTS.md  PRD.md  README.md  UEBERARBEITUNGSPLAN.md  WORKING_NOTES.md  competitor_research_pricing.md  findings.md  package-lock.json  package.json  progress.md  simulation_architecture_research.md  task_plan.md  ~$UPLAN_ERKLAERT.docx
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  health.py  report.py  simulation.py  ws.py
backend/app/core/: auth.py  config.py  supabase.py
backend/app/llm/: base.py  openai.py
backend/app/models/: actions.py  agent.py  persona.py  professional.py  simulation.py
backend/app/reports/: generator.py
backend/app/services/: entity_enricher.py  llm_client.py  persona_generator.py  persona_orchestrator.py  prompt_builder.py  report_agent.py  simulation_runner.py  simulation_service.py  smart_decision.py  ws_manager.py
backend/app/simulation/: checkpoint.py  database.py  engine.py  graph.py  memory.py  metrics.py  personas.py  resilience.py  sentiment.py  (+1 more)
backend/scripts/: smoke_test.py
backend/tests/: test_checkpoint.py  test_database.py  test_engine.py  test_graph.py  test_health.py  test_llm.py  test_memory.py  test_metrics.py  test_models.py  test_personas.py  test_platform_professional.py  test_platform_public.py  test_prompt_builder.py  test_report.py  test_resilience.py  test_willingness.py
(+58 files in other folders)
