[project]
name = "swaarm-backend"
version = "0.1.0"
description = "Swaarm - Pre-Testing Platform for Strategic Communications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "networkx>=3.4.0",
    "openai>=1.60.0",
    "arq>=0.26.0",
    "redis>=5.2.0",
    "supabase>=2.11.0",
    "stripe>=12.0.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "loguru>=0.7.0",
    "weasyprint>=63.0",
    "markdown>=3.10.2",
    "fpdf2>=2.8.7",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]  # Allow Depends() in function defaults (FastAPI pattern)

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
